--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Panda Ecommerce</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp"
       crossorigin="anonymous"
     />
-    
   </head>
   <body>
     <div class="container">
@@ -37,15 +36,15 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Shoes</a>
+                <a class="nav-link" href="#shoes">Shoes</a>
               </li>
               <li class="nav-item dropdown"></li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Backpack</a>
+                <a class="nav-link" href="#backpack">Backpack</a>
               </li>
               <li class="nav-item dropdown"></li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact Us</a>
+                <a class="nav-link" href="#contact">Contact</a>
               </li>
               <li class="nav-item dropdown"></li>
             </ul>
@@ -73,10 +72,14 @@
       >
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="1000">
-            <div class="row  align-items-center">
+            <div class="row align-items-center">
               <div class="col-md-7">
                 <h1>Headphone</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste eos voluptate dolores nemo maiores reiciendis quo! Eaque iste nam delectus?</p>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste
+                  eos voluptate dolores nemo maiores reiciendis quo! Eaque iste
+                  nam delectus?
+                </p>
                 <h1 class="price">500$</h1>
                 <button class="btn btn-danger">Buy Now</button>
               </div>
@@ -93,7 +96,11 @@
             <div class="row d-flex align-items-center">
               <div class="col-md-7">
                 <h1>MI HD TV+</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste eos voluptate dolores nemo maiores reiciendis quo! Eaque iste nam delectus?</p>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste
+                  eos voluptate dolores nemo maiores reiciendis quo! Eaque iste
+                  nam delectus?
+                </p>
                 <h1 class="price">1000$</h1>
                 <button class="btn btn-danger">Buy Now</button>
               </div>
@@ -110,7 +117,11 @@
             <div class="row align-items-center">
               <div class="col-md-7">
                 <h1>PS4</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste eos voluptate dolores nemo maiores reiciendis quo! Eaque iste nam delectus?</p>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste
+                  eos voluptate dolores nemo maiores reiciendis quo! Eaque iste
+                  nam delectus?
+                </p>
                 <h1 class="price">700$</h1>
                 <button class="btn btn-danger">Buy Now</button>
               </div>
@@ -144,6 +155,140 @@
         </button>
       </div>
     </div>
+    <div class="container catagory">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="cat1 d-flex justify-content-between align-items-center">
+            <h1>Watch</h1>
+            <img src="resource/categories/watch.png" alt="" />
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="cat2 d-flex justify-content-between align-items-center">
+            <h1>Bag</h1>
+            <img src="resource/categories/bag.png" alt="" />
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="cat3 d-flex justify-content-between align-items-center">
+            <h1>Shoes</h1>
+            <img src="resource/categories/shoes.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container shoes" id="shoes">
+      <h3>Shoes</h3>
+      <div class="card-group">
+        <div class="card">
+          <img src="resource/shoes/shoe-1.png" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Bata</h5>
+            <p class="card-text">
+              This is a wider card with supporting text below as a natural
+              lead-in to additional content. This content is a little bit
+              longer.
+            </p>
+          </div>
+          <div class="card-footer">
+            <h5>$400</h5>
+            <button class="btn btn-danger">Buy Now</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="resource/shoes/shoe-2.png" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Lotto</h5>
+            <p class="card-text">
+              This card has supporting text below as a natural lead-in to
+              additional content.
+            </p>
+          </div>
+          <div class="card-footer">
+            <h5>$350</h5>
+            <button class="btn btn-danger">Buy Now</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="resource/shoes/shoe-3.png" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Apex</h5>
+            <p class="card-text">
+              This is a wider card with supporting text below as a natural
+              lead-in to additional content. This card has even longer content
+              than the first to show that equal height action.
+            </p>
+          </div>
+          <div class="card-footer">
+            <h5>$300</h5>
+            <button class="btn btn-danger">Buy Now</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container backpack" id="backpack">
+      <h3>Backpack</h3>
+      <div class="card-group">
+        <div class="card">
+          <img src="resource/bags/bag-1.png" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Bata</h5>
+            <p class="card-text">
+              This is a wider card with supporting text below as a natural
+              lead-in to additional content. This content is a little bit
+              longer.
+            </p>
+          </div>
+          <div class="card-footer">
+            <h5>$400</h5>
+            <button class="btn btn-danger">Buy Now</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="resource/bags/bag-2.png" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Lotto</h5>
+            <p class="card-text">
+              This card has supporting text below as a natural lead-in to
+              additional content.
+            </p>
+          </div>
+          <div class="card-footer">
+            <h5>$350</h5>
+            <button class="btn btn-danger">Buy Now</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="resource/bags/bag-3.png" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Apex</h5>
+            <p class="card-text">
+              This is a wider card with supporting text below as a natural
+              lead-in to additional content. This card has even longer content
+              than the first to show that equal height action.
+            </p>
+          </div>
+          <div class="card-footer">
+            <h5>$300</h5>
+            <button class="btn btn-danger">Buy Now</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div
+      class="contact container carousel-bg d-flex justify-content-center align-items-center"
+      id="contact"
+    >
+      <div>
+        <h1>Stay Connected</h1>
+        <h6>Stay with us</h6>
+        <input class="form-control" type="text" />
+        <button class="btn btn-danger">Submit</button>
+      </div>
+    </div>
+    <footer class="footer">
+      <small>© All right reserved to Panada Limited</small>
+    </footer >
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
